# unspoken

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  README.md  config.yaml.example  design.adoc  design.md  plan.md  prd.md  prd_gaps.md  todo.md  unspoken.db-shm  unspoken.db-wal
.github/workflows/: build.yaml
designs/: design-0-architecture.md  design-1-emoji.md  design-2-interop.md  design-3-profile.md  design-4-actors.md
docs/: operator.md
src/: app.cpp  app.hpp  app_remote_user_test.cpp  app_secret_key_test.cpp  app_test.cpp  attachments.cpp  attachments.hpp  auth.cpp  auth.hpp  auth_test.cpp  commit.hpp.in  config.cpp  config.hpp  config_test.cpp  crypto.cpp  crypto.hpp  data.cpp  data.hpp  data_mock.hpp  data_test.cpp  data_types.hpp  data_types_test.cpp  database.cpp  database.hpp  database_mock.hpp  database_test.cpp  emoji.cpp  emoji.hpp  emoji_test.cpp  federation.cpp  federation.hpp  federation_test.cpp  html_sanitizer.cpp  html_sanitizer.hpp  html_sanitizer_test.cpp  http_utils.cpp  http_utils.hpp  job_queue.cpp  job_queue.hpp  job_queue_test.cpp  (+20 more)
static/: emoji_picker.js  style.css
templates/: _composer.html  _footer.html  _header.html  _post.html  base.html  bookmarks.html  error.html  index.html  profile.html  profile_edit.html  search.html  setup_username.html  thread.html
tests/fixtures/db/: v1.sqlite
tests/interop/: README.md  docker-compose.akkoma.yml  run.sh
tests/interop/akkoma/: Dockerfile  interop-entrypoint.sh
tests/interop/config/: akkoma.exs  unspoken.yaml
tests/interop/fake_oidc/: Dockerfile  fake_oidc.cpp  jwt_private.pem  jwt_public.jwk
tests/interop/lifecycle_peer/: Dockerfile  lifecycle_peer.py
tests/interop/runner/: Dockerfile  interop.py
tests/interop/unspoken/: Dockerfile
tools/: generate_emoji_data.py
